force-app/main/default/objects/Product__c/fields/Available_To_Order__c.field-meta.xml
<CustomField>
    <fullName>Available_To_Order__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>This product can be ordered. Uncheck to make it unavailable to the partner order form.</inlineHelpText>
    <label>Available To Order</label>
    <type>Checkbox</type>
</CustomField>