force-app/main/default/objects/Product__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Product Description</label>
    <type>TextArea</type>
</CustomField>