force-app/main/default/objects/Product__c/fields/Family__c.field-meta.xml
<CustomField>
    <fullName>Family__c</fullName>
    <description>same as Product Family on standard Product</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Donation_Item_Category</valueSetName>
    </valueSet>
</CustomField>