force-app/main/default/objects/Product__c/fields/Item_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Item_Bundle__c</fullName>
    <defaultValue>1</defaultValue>
    <description># of items bundled together for fulfilling orders of this product</description>
    <inlineHelpText># of items bundled together for fulfilling orders of this product</inlineHelpText>
    <label>Items In Bundle</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>