force-app/main/default/objects/Product__c/fields/Power_of__c.field-meta.xml
<CustomField>
    <fullName>Power_of__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Power of !</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>