force-app/main/default/objects/Product__c/fields/Product_Details__c.field-meta.xml
<CustomField>
    <fullName>Product_Details__c</fullName>
    <inlineHelpText>More product details, upload pictures or product documentation</inlineHelpText>
    <label>More Product Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>