force-app/main/default/objects/Product__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number of items of this product in inventory now. This field is calculated.</description>
    <inlineHelpText>The number of items of this product in inventory now. This field is calculated.</inlineHelpText>
    <label># In Stock</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>