force-app/main/default/objects/Product__c/fields/Quantity_Pending__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Pending__c</fullName>
    <description>The number of items of this product that will be inventory after pending orders are fulfilled. This field is calculated.</description>
    <formula>IF((Quantity__c - Quantity_Needed__c) &lt; 0, 0, (Quantity__c - Quantity_Needed__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number of items of this product that will be inventory after pending orders are fulfilled. This field is calculated.</inlineHelpText>
    <label># In Stock (Pending)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>