force-app/main/default/objects/Product__c/fields/Quantity_Short__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Short__c</fullName>
    <description>The number of items of this product that are needed to fulfill pending orders but are not available in the inventory. This field is calculated.</description>
    <formula>IF(Quantity_Needed__c &gt; Quantity__c,  Quantity_Needed__c - Quantity__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number of items of this product that are needed to fulfill pending orders but are not available in the inventory. This field is calculated.</inlineHelpText>
    <label># Short</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>