force-app/main/default/objects/Product__c/fields/Value_In_Stock__c.field-meta.xml
<CustomField>
    <fullName>Value_In_Stock__c</fullName>
    <description>Total $ value of items of this product in the current inventory.</description>
    <formula>Quantity__c *  Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total $ value of items of this product in the current inventory.</inlineHelpText>
    <label>Value In Stock</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>