force-app/main/default/objects/Product__c/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <description>The weight of this product in the selected Weight Unit of Measure (Examples: 1 pound, 64 kilograms, 12 ounces)</description>
    <inlineHelpText>The weight of this product in the selected Weight Unit of Measure (Examples: 1 pound, 64 kilograms, 12 ounces)</inlineHelpText>
    <label>Weight</label>
    <precision>8</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>