force-app/main/default/objects/Product__c/fields/Weight_Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Weight_Unit_of_Measure__c</fullName>
    <label>Weight Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Weight_Unit_of_Measure</valueSetName>
    </valueSet>
</CustomField>