force-app/main/default/objects/Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Family__c</columns>
    <columns>Quantity__c</columns>
    <columns>Quantity_Needed__c</columns>
    <columns>Quantity_Short__c</columns>
    <columns>Value__c</columns>
    <columns>Value_In_Stock__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Available_To_Order__c</columns>
    <columns>Weight__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>